force-app/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/NVMStatsSF__NVM_Call_Summary__c.object-meta.xml
<CustomObject>
    <label>Vonage Call Summary</label>
    <nameField>
        <displayFormat>NVMCS-{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vonage Call Summaries</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>