force-app/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/Abandoned_Outside_of_Queue__c.field-meta.xml
<CustomField>
    <fullName>Abandoned_Outside_of_Queue__c</fullName>
    <formula>IF(AND( Offered_Call__c &gt;0, NVMStatsSF__Abandoned__c = True), 0, 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Abandoned Outside of Queue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>