force-app/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <formula>NVMStatsSF__Related_Contact__r.Account.Location_ID__c</formula>
    <label>AccountId</label>
    <type>Text</type>
</CustomField>