force-app/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/After_Hours_Call__c.field-meta.xml
<CustomField>
    <fullName>After_Hours_Call__c</fullName>
    <formula>IF( OR( NVMStatsSF__EndApplet__c = &apos;AN OOH&apos;, NVMStatsSF__EndApplet__c = &apos;AN Holiday&apos;),1,0)</formula>
    <label>After Hours Call</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>