force-app/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/Agent_Company__c.field-meta.xml
<CustomField>
    <fullName>Agent_Company__c</fullName>
    <formula>NVMStatsSF__Agent__r.CompanyName</formula>
    <label>Agent Company</label>
    <type>Text</type>
</CustomField>