force-app/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/Agent_Team_Lead__c.field-meta.xml
<CustomField>
    <fullName>Agent_Team_Lead__c</fullName>
    <formula>NVMStatsSF__Agent__r.Team_Lead__r.FirstName + &apos; &apos; +   NVMStatsSF__Agent__r.Team_Lead__r.LastName</formula>
    <label>Agent Team Lead</label>
    <type>Text</type>
</CustomField>