force-app/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/Answer_Time__c.field-meta.xml
<CustomField>
    <fullName>Answer_Time__c</fullName>
    <formula>IF( Answered_Call__c = 1,NVMStatsSF__Agent_Ring_Duration__c + NVMStatsSF__Queue_Duration__c,NULL)</formula>
    <label>Answer Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>