force-app/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/Answered_in_SVL__c.field-meta.xml
<CustomField>
    <fullName>Answered_in_SVL__c</fullName>
    <formula>IF( AND((NVMStatsSF__Queue_Duration__c + NVMStatsSF__Agent_Ring_Duration__c) &lt; 31,Answered_Call__c=1), 1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Answered in SVL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>