force-app/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/Answered_Outbound__c.field-meta.xml
<CustomField>
    <fullName>Answered_Outbound__c</fullName>
    <formula>IF( AND(NVMStatsSF__Agent_Talk_Time__c &gt; 0, ISPICKVAL(NVMStatsSF__Interaction_Type__c,&apos;Outbound Call&apos;) ), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Answered Outbound</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>