force-app/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/Appointment_Setting__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Setting__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Conversation Analyzer Category</description>
    <label>Appointment Setting</label>
    <type>Checkbox</type>
</CustomField>