force-app/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/Appointment_Setting_Appointment__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Setting_Appointment__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Appointment Setting Appointment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>