force-app/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/Call_Result_Subcategory__c.field-meta.xml
<CustomField>
    <fullName>Call_Result_Subcategory__c</fullName>
    <description>Call Result Subcategory value copied from the Call Task if one was found</description>
    <inlineHelpText>Call Result Subcategory value copied from the Call Task if one was found</inlineHelpText>
    <label>Call Result Subcategory</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New Denture</fullName>
                <label>New Denture (Patient is new to wearing dentures)</label>
            </value>
            <value>
                <fullName>Replacement Denture</fullName>
                <label>Replacement Denture (Patient is a current denture wearer)</label>
            </value>
            <value>
                <fullName>Partial Denture</fullName>
            </value>
            <value>
                <fullName>Implant Supported Denture</fullName>
            </value>
            <value>
                <fullName>All-In-One</fullName>
            </value>
            <value>
                <fullName>Single Tooth Implant</fullName>
            </value>
            <value>
                <fullName>Extraction Only</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Repair</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>