force-app/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/Call_Time_Status__c.field-meta.xml
<CustomField>
    <fullName>Call_Time_Status__c</fullName>
    <formula>IF(TIMEVALUE(NVMStatsSF__CallTime__c - 0.2083) &gt;= TIMEVALUE(&quot;07:00:00.000&quot;) &amp;&amp; TIMEVALUE(NVMStatsSF__CallTime__c - 0.2083) &lt;= TIMEVALUE(&quot;21:00:00.000&quot;) &amp;&amp; NVMStatsSF__Local_Day_of_Week__c = &quot;1-Monday&quot; , &quot;During Business Hours&quot;,IF(TIMEVALUE(NVMStatsSF__CallTime__c - 0.2083) &gt;= TIMEVALUE(&quot;07:00:00.000&quot;) &amp;&amp; TIMEVALUE(NVMStatsSF__CallTime__c - 0.2083) &lt;= TIMEVALUE(&quot;21:00:00.000&quot;) &amp;&amp; NVMStatsSF__Local_Day_of_Week__c = &quot;2-Tuesday&quot; , &quot;During Business Hours&quot;,IF(TIMEVALUE(NVMStatsSF__CallTime__c - 0.2083) &gt;= TIMEVALUE(&quot;07:00:00.000&quot;) &amp;&amp; TIMEVALUE(NVMStatsSF__CallTime__c - 0.2083) &lt;= TIMEVALUE(&quot;21:00:00.000&quot;) &amp;&amp; NVMStatsSF__Local_Day_of_Week__c = &quot;3-Wednesday&quot; , &quot;During Business Hours&quot;,IF(TIMEVALUE(NVMStatsSF__CallTime__c - 0.2083) &gt;= TIMEVALUE(&quot;07:00:00.000&quot;) &amp;&amp; TIMEVALUE(NVMStatsSF__CallTime__c - 0.2083) &lt;= TIMEVALUE(&quot;21:00:00.000&quot;) &amp;&amp; NVMStatsSF__Local_Day_of_Week__c = &quot;4-Thursday&quot; , &quot;During Business Hours&quot;,IF(TIMEVALUE(NVMStatsSF__CallTime__c - 0.2083) &gt;= TIMEVALUE(&quot;07:00:00.000&quot;) &amp;&amp; TIMEVALUE(NVMStatsSF__CallTime__c - 0.2083) &lt;= TIMEVALUE(&quot;21:00:00.000&quot;) &amp;&amp; NVMStatsSF__Local_Day_of_Week__c = &quot;5-Friday&quot; , &quot;During Business Hours&quot;,IF(TIMEVALUE(NVMStatsSF__CallTime__c - 0.2083) &gt;= TIMEVALUE(&quot;08:00:00.000&quot;) &amp;&amp; TIMEVALUE(NVMStatsSF__CallTime__c - 0.2083) &lt;= TIMEVALUE(&quot;16:30:00.000&quot;) &amp;&amp; NVMStatsSF__Local_Day_of_Week__c = &quot;6-Saturday&quot; , &quot;During Business Hours&quot;,&quot;Outside Business Hours&quot;))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Call Time Status</label>
    <type>Text</type>
</CustomField>