force-app/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/Calls_Last_48_Hrs__c.field-meta.xml
<CustomField>
    <fullName>Calls_Last_48_Hrs__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Calls Last 48 Hrs (this CLID)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>