force-app/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/Case_00154444__c.field-meta.xml
<CustomField>
    <fullName>Case_00154444__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Categories manually updated. NVM Case 00154444</description>
    <label>Case 00154444</label>
    <type>Checkbox</type>
</CustomField>