force-app/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/Closing__c.field-meta.xml
<CustomField>
    <fullName>Closing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Conversation Analyzer Category</description>
    <label>Closing</label>
    <type>Checkbox</type>
</CustomField>