force-app/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/Closing_Closing__c.field-meta.xml
<CustomField>
    <fullName>Closing_Closing__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Closing Closing</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>