force-app/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/Customer_Inquiry__c.field-meta.xml
<CustomField>
    <fullName>Customer_Inquiry__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Inquiry</label>
    <referenceTo>Customer_Inquiry__c</referenceTo>
    <relationshipLabel>Vonage Call Summaries</relationshipLabel>
    <relationshipName>Vonage_Call_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>