force-app/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/DayTest__c.field-meta.xml
<CustomField>
    <fullName>DayTest__c</fullName>
    <formula>TEXT(DAY(DATEVALUE(NVMStatsSF__CallTime__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DayTest</label>
    <type>Text</type>
</CustomField>