force-app/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/Development__c.field-meta.xml
<CustomField>
    <fullName>Development__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Conversation Analyzer Category</description>
    <label>Development</label>
    <type>Checkbox</type>
</CustomField>