force-app/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/Development_Development__c.field-meta.xml
<CustomField>
    <fullName>Development_Development__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Development Development</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>