force-app/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/DKey__c.field-meta.xml
<CustomField>
    <fullName>DKey__c</fullName>
    <description>NVM &quot;fix&quot; to duplicate call summaries (oct 4 2018)</description>
    <label>DKey</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>