force-app/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/DNIS_Call__c.field-meta.xml
<CustomField>
    <fullName>DNIS_Call__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DNIS Call</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>