force-app/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/Has_Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Has_Lead_Source__c</fullName>
    <formula>IF(NOT(ISBLANK( TEXT( NVMStatsSF__Related_Contact__r.LeadSource ))),1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Lead Source</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>