force-app/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/HIPAA__c.field-meta.xml
<CustomField>
    <fullName>HIPAA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Conversation Analyzer Category</description>
    <label>HIPAA</label>
    <type>Checkbox</type>
</CustomField>