force-app/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/HIPAA_HIPAA__c.field-meta.xml
<CustomField>
    <fullName>HIPAA_HIPAA__c</fullName>
    <defaultValue>0</defaultValue>
    <label>HIPAA HIPAA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>