force-app/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/Inquiry_Call_Count__c.field-meta.xml
<CustomField>
    <fullName>Inquiry_Call_Count__c</fullName>
    <formula>Customer_Inquiry__r.Call_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inquiry Call Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>