force-app/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/Inquiry_Closed__c.field-meta.xml
<CustomField>
    <fullName>Inquiry_Closed__c</fullName>
    <formula>Customer_Inquiry__r.Closed__c</formula>
    <label>Inquiry Closed</label>
    <type>Checkbox</type>
</CustomField>