force-app/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/Inquiry_Closed_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Inquiry_Closed_DateTime__c</fullName>
    <formula>Customer_Inquiry__r.Date_Time_Closed__c</formula>
    <label>Inquiry Closed DateTime</label>
    <type>DateTime</type>
</CustomField>