force-app/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/Inquiry_FCR__c.field-meta.xml
<CustomField>
    <fullName>Inquiry_FCR__c</fullName>
    <formula>Customer_Inquiry__r.Resolved_on_First_Call__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inquiry FCR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>