force-app/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/Inquiry_Last_Call_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Inquiry_Last_Call_DateTime__c</fullName>
    <formula>Customer_Inquiry__r.Last_Call_DateTime__c</formula>
    <label>Inquiry Last Call DateTime</label>
    <type>DateTime</type>
</CustomField>