force-app/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/Inquiry_Open_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Inquiry_Open_DateTime__c</fullName>
    <formula>Customer_Inquiry__r.First_Call_DateTime__c</formula>
    <label>Inquiry Open DateTime</label>
    <type>DateTime</type>
</CustomField>