force-app/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/Insurance__c.field-meta.xml
<CustomField>
    <fullName>Insurance__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Conversation Analyzer Category</description>
    <label>Insurance</label>
    <type>Checkbox</type>
</CustomField>