force-app/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/Insurance_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Insurance__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Insurance Insurance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>