force-app/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/Insurance_Intake_Required__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Intake_Required__c</fullName>
    <formula>IF(NOT(ISBLANK(NVMStatsSF__Related_Account__c)),NVMStatsSF__Related_Account__r.InsuranceIntakeRequiredCheckbox__c,

IF(NOT(ISBLANK(NVMStatsSF__Related_Case__c)),NVMStatsSF__Related_Case__r.Account.InsuranceIntakeRequiredCheckbox__c,

IF(NOT(ISBLANK(NVMStatsSF__Related_Opportunity__c)),NVMStatsSF__Related_Opportunity__r.Account.InsuranceIntakeRequiredCheckbox__c,

IF(NOT(ISBLANK(NVMStatsSF__Related_Contact__r.Account.Name)),NVMStatsSF__Related_Contact__r.Account.InsuranceIntakeRequiredCheckbox__c,

IF(NOT(ISBLANK(NVMStatsSF__Related_Contact__c)), NVMStatsSF__Related_Contact__r.Account.InsuranceIntakeRequiredCheckbox__c,

IF(NOT(ISBLANK(NVMStatsSF__Related_Lead__c)), False,

False))))))</formula>
    <label>Insurance Intake Required</label>
    <type>Checkbox</type>
</CustomField>