force-app/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/Insurance_Plan__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Plan__c</fullName>
    <label>Insurance Plan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aetna</fullName>
            </value>
            <value>
                <fullName>Ameritas</fullName>
            </value>
            <value>
                <fullName>Blue Cross Blue Shield</fullName>
            </value>
            <value>
                <fullName>Cigna</fullName>
            </value>
            <value>
                <fullName>Delta Dental</fullName>
            </value>
            <value>
                <fullName>DentaQuest</fullName>
            </value>
            <value>
                <fullName>Dentemax</fullName>
            </value>
            <value>
                <fullName>GEHA</fullName>
            </value>
            <value>
                <fullName>Guardian</fullName>
            </value>
            <value>
                <fullName>Humana</fullName>
            </value>
            <value>
                <fullName>Medicaid</fullName>
            </value>
            <value>
                <fullName>Medicare Advantage - Aetna</fullName>
            </value>
            <value>
                <fullName>Medicare Advantage - Cigna</fullName>
            </value>
            <value>
                <fullName>Medicare Advantage - Humana</fullName>
            </value>
            <value>
                <fullName>Medicare Advantage - other</fullName>
            </value>
            <value>
                <fullName>Medicare Advantage - United Concordia</fullName>
            </value>
            <value>
                <fullName>Medicare Advantage - United Healthcare</fullName>
            </value>
            <value>
                <fullName>MetLife</fullName>
            </value>
            <value>
                <fullName>Other Commercial Insurance</fullName>
            </value>
            <value>
                <fullName>Principal</fullName>
            </value>
            <value>
                <fullName>United Concordia</fullName>
            </value>
            <value>
                <fullName>United Healthcare</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>