force-app/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/Interval_Time__c.field-meta.xml
<CustomField>
    <fullName>Interval_Time__c</fullName>
    <formula>TIMEVALUE(NVMStatsSF__Local_Hour__c &amp; Interval_Minute__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Interval Time</label>
    <type>Time</type>
</CustomField>