force-app/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/IVR_Ins__c.field-meta.xml
<CustomField>
    <fullName>IVR_Ins__c</fullName>
    <label>IVR Using Insurance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>