force-app/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/IVR_New__c.field-meta.xml
<CustomField>
    <fullName>IVR_New__c</fullName>
    <description>Caller pressed:
1 - Schedule a new appt
2 - Confirm, cancel or reschedule
3 - Directions
4 - All other questions</description>
    <inlineHelpText>Caller pressed:
1 - Schedule a new appt
2 - Confirm, cancel or reschedule
3 - Directions
4 - All other questions</inlineHelpText>
    <label>IVR New</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Schedule</fullName>
            </value>
            <value>
                <fullName>Modify</fullName>
            </value>
            <value>
                <fullName>Directions</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>