force-app/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/Medicaid__c.field-meta.xml
<CustomField>
    <fullName>Medicaid__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Conversation Analyzer Category</description>
    <label>Medicaid</label>
    <type>Checkbox</type>
</CustomField>