force-app/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/Medicaid_Medicaid__c.field-meta.xml
<CustomField>
    <fullName>Medicaid_Medicaid__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Medicaid Medicaid</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>