force-app/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/New_or_Existing__c.field-meta.xml
<CustomField>
    <fullName>New_or_Existing__c</fullName>
    <description>Caller pressed: 
1 - New patient
2 -  Existing patient</description>
    <inlineHelpText>Caller pressed: 
1 - New patient
2 -  Existing patient</inlineHelpText>
    <label>New or Existing Patient</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Existing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>