force-app/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/Number_of_Hold__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Hold__c</fullName>
    <formula>IF(NVMStatsSF__Consult_Time__c &gt; 0, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Hold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>