force-app/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/NVMStatsSF__Abandoned__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Abandoned__c</fullName>
    <formula>NOT(NVMStatsSF__Queued_Callback__c || NVMStatsSF__MessageTaken__c || NVMStatsSF__Last_State__c == &apos;CCR Handled&apos;) &amp;&amp; (NVMStatsSF__Last_State__c == &apos;Queue Abandoned&apos; || ( NVMStatsSF__EndRecorded__c &amp;&amp; NVMStatsSF__Agent_Talk_Time__c == 0 &amp;&amp; NVMStatsSF__Post_Call_Automation__c == 0 &amp;&amp;  (TEXT(NVMStatsSF__Interaction_Type__c) == &apos;Phone&apos; || BEGINS(TEXT(NVMStatsSF__Interaction_Type__c), &apos;In&apos;)) ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This box is checked if the Call was an abandoned Inbound or Internal Call</inlineHelpText>
    <label>Abandoned</label>
    <type>Checkbox</type>
</CustomField>