force-app/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/NVMStatsSF__Agent2_Transfer_Time__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Agent2_Transfer_Time__c</fullName>
    <inlineHelpText>Total transfer-in durations (talk events immediately following each transfer)</inlineHelpText>
    <label>Transfer Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>