force-app/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/NVMStatsSF__Agent_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Agent_Phone_Number__c</fullName>
    <inlineHelpText>Phone number Agent received Call on</inlineHelpText>
    <label>Agent Phone Number</label>
    <type>Phone</type>
</CustomField>