force-app/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/NVMStatsSF__Call_Diverted__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Call_Diverted__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>True if a Call Divert or Call Connect Router (CCR) was used</inlineHelpText>
    <label>Call Diverted</label>
    <type>Checkbox</type>
</CustomField>