force-app/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/NVMStatsSF__CallTime__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__CallTime__c</fullName>
    <inlineHelpText>Date/Time stamp of Call Start (stored internally as UTC but shown in Salesforce to you in your timezone)</inlineHelpText>
    <label>CallTime</label>
    <type>DateTime</type>
</CustomField>