force-app/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/NVMStatsSF__Categorized_At__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Categorized_At__c</fullName>
    <inlineHelpText>Timestamp of the latest (re-)categorization by Conversation Analyzer</inlineHelpText>
    <label>Categorized At</label>
    <type>DateTime</type>
</CustomField>