force-app/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/NVMStatsSF__ChkStr__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__ChkStr__c</fullName>
    <inlineHelpText>Compressed, ordered representation of all unfiltered events in an inbound Call or Case. Can be used for advanced analysis. Do not edit data in this field.</inlineHelpText>
    <label>ChkStr</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>