force-app/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/NVMStatsSF__CLID__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__CLID__c</fullName>
    <inlineHelpText>The number presented by Caller (Caller ID)</inlineHelpText>
    <label>CLID</label>
    <type>Phone</type>
</CustomField>