force-app/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/NVMStatsSF__Connected__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Connected__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>True if two or more parties connected</inlineHelpText>
    <label>Connected</label>
    <type>Checkbox</type>
</CustomField>