force-app/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/NVMStatsSF__CR_Interrupts__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__CR_Interrupts__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Number of Pauses in the Call Recording</inlineHelpText>
    <label>Number of Call Recording Interrupts</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>