force-app/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/NVMStatsSF__Customer_Percent__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Customer_Percent__c</fullName>
    <inlineHelpText>Percentage of recording the Customer alone was talking</inlineHelpText>
    <label>Customer Percent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>