force-app/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/NVMStatsSF__Data_Source_Values__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Data_Source_Values__c</fullName>
    <inlineHelpText>Comma separated list of Data Source Name:Value pairs from SetDataSource Interaction Plan Events</inlineHelpText>
    <label>Data Source Values</label>
    <length>255</length>
    <type>Text</type>
</CustomField>