force-app/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/NVMStatsSF__Date__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Date__c</fullName>
    <inlineHelpText>UTC Date of the Call</inlineHelpText>
    <label>UTC Date</label>
    <type>Date</type>
</CustomField>